--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -242,10 +242,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f9b98b72c18>"
+       "<folium.map.Marker at 0x7faab0a32198>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
